--- a/mc.html
+++ b/mc.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Default Required Resources -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=569,
-    maximum-scale=1"
-        />
-        <link
-            rel="alternate"
-            type="application/rss+xml"
-            title="Blog RSS"
-            href="//mehvix.com/posts/rss.xml"
-        />
-        <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
-        <script src="/static/js/include.js"></script>
 
-        <!-- HLJS (try and remove if not used) -->
-        <!-- https://cdnjs.com/libraries/highlight.js -->
-        <!-- <link
+<head>
+    <!-- Default Required Resources -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=569,
+    maximum-scale=1" />
+    <link rel="alternate" type="application/rss+xml" title="Blog RSS" href="//mehvix.com/posts/rss.xml" />
+    <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
+    <script src="/static/js/include.js"></script>
+
+    <!-- HLJS (try and remove if not used) -->
+    <!-- https://cdnjs.com/libraries/highlight.js -->
+    <!-- <link
             type="text/css"
             rel="stylesheet"
             href="/static/css/atom-one-dark.css"
@@ -34,57 +27,50 @@
             hljs.highlightAll()
         </script> -->
 
-        <title>Mehvix | Projects</title>
-        <style>
-            :root {
-                --outside-bg-color: #8b4513;
-                --inside-bg-color: #cdd8df;
-            }
-        </style>
-    </head>
+    <title>Mehvix | Projects</title>
+    <style>
+        :root {
+            --outside-bg-color: #8b4513;
+            --inside-bg-color: #cdd8df;
+        }
 
-    <body>
-        <div class="box">
-            <div class="nav">
-                <a href="/index.html">~</a>/<a href="./index.html">Server</a>/<a
-                    href=""
-                    class="inverse-bg"
-                    >mc</a
-                >
-            </div>
+    </style>
+</head>
 
-            <code>mc.mehvix.com:25544</code><br /><br />
-            <video
-                style="width: 100%"
-                src="./static/media/synapsmc.webm"
-                controls
-                autoplay
-            >
-                Your browser does not support embedded video through HTML5 :(
-            </video>
-
-            <div id="footer">
-                <table id="footerTable">
-                    <tr>
-                        <td>$BTC</td>
-                        <td>15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</td>
-                    </tr>
-                    <tr>
-                        <td>$XMR</td>
-                        <td>
-                            45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>$ETH</td>
-                        <td>0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</td>
-                    </tr>
-                    <tr>
-                        <td id="footerDateYear">2021</td>
-                        <td>Max Vogel</td>
-                    </tr>
-                </table>
-            </div>
+<body>
+    <div class="box">
+        <div class="nav">
+            <a href="/index.html">~</a>/<a href="./index.html">Server</a>/<a href="" class="inverse-bg">mc</a>
         </div>
-    </body>
+
+        <code>mc.mehvix.com:25544</code><br /><br />
+        <video style="width: 100%" src="./static/media/synapsmc.webm" controls autoplay>
+            Your browser does not support embedded video through HTML5 :(
+        </video>
+
+        <div id="footer">
+            <table id="footerTable">
+                <tr>
+                    <td>$BTC</td>
+                    <td>15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</td>
+                </tr>
+                <tr>
+                    <td>$XMR</td>
+                    <td>
+                        45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
+                    </td>
+                </tr>
+                <tr>
+                    <td>$ETH</td>
+                    <td>0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</td>
+                </tr>
+                <tr>
+                    <td id="footerDateYear">2021</td>
+                    <td>Max Vogel</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</body>
+
 </html>
