--- a/404.html
+++ b/404.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Default Required Resources -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=569,
-        maximum-scale=1"
-        />
-        <link
-            rel="alternate"
-            type="application/rss+xml"
-            title="Blog RSS"
-            href="//mehvix.com/posts/rss.xml"
-        />
-        <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
-        <script src="/static/js/include.js"></script>
 
-        <!-- HLJS (try and remove if not used) -->
-        <!-- https://cdnjs.com/libraries/highlight.js -->
-        <!-- <link
+<head>
+    <!-- Default Required Resources -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=569,
+        maximum-scale=1" />
+    <link rel="alternate" type="application/rss+xml" title="Blog RSS" href="//mehvix.com/posts/rss.xml" />
+    <link href="/static/css/style.css" type="text/css" rel="stylesheet" />
+    <script src="/static/js/include.js"></script>
+
+    <!-- HLJS (try and remove if not used) -->
+    <!-- https://cdnjs.com/libraries/highlight.js -->
+    <!-- <link
             type="text/css"
             rel="stylesheet"
             href="/static/css/atom-one-dark.css"
@@ -34,28 +27,29 @@
             hljs.highlightAll()
         </script> -->
 
-        <title>Mehvix | 404</title>
-        <style>
-            :root {
-                --outside-bg-color: #c2ba00;
-                --inside-bg-color: #ffffff;
-            }
-        </style>
-    </head>
+    <title>Mehvix | 404</title>
+    <style>
+        :root {
+            --outside-bg-color: #c2ba00;
+            --inside-bg-color: #ffffff;
+        }
 
-    <body>
-        <div class="box">
-            <div class="nav">
-                <a href="/">~</a>/<a href="">404</a>
-            </div>
+    </style>
+</head>
 
-            <p>
-                File not found. If you think this should exist, reach out to me
-                (my contact info is on the home page).
-            </p>
+<body>
+    <div class="box">
+        <div class="nav">
+            <a href="/">~</a>/<a href="">404</a>
+        </div>
 
-            <div style="display: block; text-align: center">
-                <pre style="display: inline-block; line-height: 1.25">
+        <p>
+            File not found. If you think this should exist, reach out to me
+            (my contact info is on the home page).
+        </p>
+
+        <div style="display: block; text-align: center">
+            <pre style="display: inline-block; line-height: 1.25">
             *     ,MMM8&&&.            *
                 <a href="//mehvix.com">Return Home.</a>    .
                 NMMMM88&&&&&&&
@@ -79,29 +73,30 @@ _/\_/\_/\__  _/_/\_/\__~__/_/\_/\_/\_/\_/\_
 |  |  |  |  |  |  |  |\)|  |  |  |  |  |  |
 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
                 </pre>
-            </div>
-            <div id="footer">
-                <table id="footerTable">
-                    <tr>
-                        <td>$BTC</td>
-                        <td>15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</td>
-                    </tr>
-                    <tr>
-                        <td>$XMR</td>
-                        <td>
-                            45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>$ETH</td>
-                        <td>0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</td>
-                    </tr>
-                    <tr>
-                        <td id="footerDateYear">2021</td>
-                        <td>Max Vogel</td>
-                    </tr>
-                </table>
-            </div>
         </div>
-    </body>
+        <div id="footer">
+            <table id="footerTable">
+                <tr>
+                    <td>$BTC</td>
+                    <td>15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</td>
+                </tr>
+                <tr>
+                    <td>$XMR</td>
+                    <td>
+                        45MaKMYnWBnNWS4rtbrMp8C6wL1B1mguW6AjmJBGqLJkCzVUMuXwamzRfrmiwLw1WrbUptNjY1DoL4Yu4fXqTDAcDEWpuTZ
+                    </td>
+                </tr>
+                <tr>
+                    <td>$ETH</td>
+                    <td>0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</td>
+                </tr>
+                <tr>
+                    <td id="footerDateYear">2021</td>
+                    <td>Max Vogel</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</body>
+
 </html>
