--- a/index.html
+++ b/index.html
@@ -10,28 +10,10 @@
     <link href="https://toolbox.mehvix.com/toolbox-posts.css" type="text/css" rel="stylesheet" />
     <script src="/static/js/include.js"></script>
 
-    <!-- HLJS (try and remove if not used) -->
-    <!-- https://cdnjs.com/libraries/highlight.js -->
-    <!-- <link
-            type="text/css"
-            rel="stylesheet"
-            href="/static/css/atom-one-dark.css"
-        />
-        <script
-            src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"
-            integrity="sha512-MinqHeqca99q5bWxFNQEQpplMBFiUNrEwuuDj2rCSh1DgeeTXUgvgYIHZ1puBS9IKBkdfLMSk/ZWVDasa3Y/2A=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
-        <script>
-            hljs.highlightAll()
-        </script> -->
-
     <!-- Unique -->
     <script src="/static/js/attributes.js"></script>
 
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦧</text></svg>" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦧</text></svg>" />
 
     <link rel="stylesheet" href="/static/css/home.css">
     <title>Mehvix | Home</title>
@@ -56,32 +38,13 @@
         <div class="nav"><a href="">~</a>/</div>
         <div>
             <p>
-                Hello! My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web —
-                I'm
-                sure you can figure out what it means. I was born in 2002 and grew up around the <a
-                    href="https://en.wikipedia.org/wiki/Middleton,_Wisconsin">great dairyland</a>. Here is a <a
-                    onclick="toggleImage(me)">picture of my dad and me</a><img class="expander"
-                    onclick="toggleImage(me)" />
-                from Google Maps circa 2007.
+                Hello. My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — surely you can figure out what it means. I was born in 2002 and grew up around the <a href="https://en.wikipedia.org/wiki/Dane_County,_Wisconsin">great dairyland</a>. Here is a <a onclick="toggleImage(me)">picture</a><img class="expander" onclick="toggleImage(me)" /> of my dad and me circa 2007 Google Maps.
             </p>
             <img id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" />
             <p>
-                Right now I'm a second-year at
-                <a href="//www.berkeley.edu/">Berkeley</a> majoring in
-                <a href="//eecseecs.com/">EECS</a>. I'm currently working at
-                <a href="//tritonsensors.com/">Triton Sensors</a> as a software engineer as well as under <a
-                    href="http://people.eecs.berkeley.edu/~sequin">Carlo Séquin</a> where I'm building on <a
-                    href="https://jipcad.github.io/">JIPCAD</a>: a program for modeling mathematical objects. Generally,
-                I am
-                passionate about promoting and protecting digital privacy and freedoms. In my free time I enjoy
-                <a href="http://www.cracoviafoilfencing.com/">foil fencing</a>,
-                <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>,
-                <a href="/static/media/home/IMG_20210616_131213.jpg">hiking earth</a>, among creating things: I'm an
-                amateur <a href="//cloud.mehvix.com">server admin</a>, <a
-                    href="/static/media/home/for-fun.png">gourmet</a>
-                mycologist, 3D-printing cybernaut, and <a href="/static/media/home/20210816-001132.png">pyrotechnic</a>
-                (in
-                that order, least to most amateur).
+                Right now I'm in my forth year at <a href="//eecs.berkeley.edu/">Berkeley EECS</a> and a research assistant with the <a href="//radiology.ucsf.edu/research/labs/physics/big-data">BDRAD lab</a> at UCSF; I'm versed in modern approaches to deep learning and computer vision. Generally, I am passionate about promoting and protecting digital privacy and freedoms; I daily-drive a Linux system, as all CS majors should.
+
+                In my free time I enjoy <a href="//www.mosaicboulders.com//">bouldering</a> and <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>.
             </p>
             <p>
                 Fun fact:
@@ -96,7 +59,8 @@
 
         <div>
             <h1>Contact</h1>
-            <p>
+            <!-- out of town -->
+            <!-- <p>
                 I enjoy meeting interesting people. If you're around Berkeley / the bay area and want to grab coffee (or
                 go
                 <a href="/static/media/home/steam-tunnel.jpeg">steam tunneling</a>) sometime, reach out!
@@ -105,7 +69,7 @@
                 I am a <a href="https://signal.org/">Signal</a> fanatic —— I use it to reach everyone from my roommates
                 to my
                 grandparents. If you don't have my number, shoot me an email with yours.
-            </p>
+            </p> -->
             <div>
                 <table class="about">
                     <tr>
@@ -116,11 +80,11 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Signal</td>
-                        <td>[phone number, email me yours]</td>
+                        <td><a href="//signal.org">Signal</a></td>
+                        <td>Mehvix.01</td>
                     </tr>
                     <tr>
-                        <td>Matrix</td>
+                        <td><a href="//element.io">Element</a></td>
                         <td>
                             <span class="select-all">@mehvix:matrix.org</span>
                             <wbr />(<a href="keys.html">keys</a>)
@@ -130,8 +94,7 @@
                         <td>Discord</td>
                         <td>
                             <span class="select-all">Mehvix#7966</span>
-                            <wbr />(<a href="//mhvx.cc/discord1">consider</a> <a href="//mhvx.cc/discord2">not</a> <a
-                                href="//mhvx.cc/discord3">participating</a>!)
+                            <wbr />(<a href="//mhvx.cc/discord1">consider</a> <a href="//mhvx.cc/discord2">not</a> <a href="//mhvx.cc/discord3">participating</a>!)
                         </td>
                     </tr>
                     <!-- I do not actively used session. -->
@@ -156,51 +119,17 @@
         </div>
 
         <div>
-            <h1>Me</h1>
+            <h1>Me, Online</h1>
             <ul>
-                <li>
-                    Peep my (personal) projects on
-                    <a href="//github.com/mehvix">GitHub</a> and
-                    <a href="//scratch.mit.edu/users/maxninja/">Scratch</a>.
-                </li>
-                <li>
-                    See what I've contributed to LLM models: my <a href="//stackoverflow.com/users/7833617/">Stack
-                        Overflow</a> answers.
-                </li>
-                <li>
-                    See the power of Colemak-DH on <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a>.
-                </li>
-                <li>
-                    Jam out to my
-                    <a href="//open.spotify.com/user/mehvix">Spotify</a>
-                    playlists or
-                    <a href="//musictaste.space/request/welcome-potato-808">compare our tastes</a>.
-                </li>
-                <li>
-                    Connect on the corporate cesspool <a href="//www.linkedin.com/in/mehvix/">LinkedIn</a>.
-                </li>
-                <li>
-                    Verify I am who I say I am through <a href="//keybase.io/mehvix/">Keybase</a>.
-                </li>
-                <li>
-                    Stalk what I'm reading on <a href="//www.goodreads.com/mehvix/">GoodReads</a>.
-                </li>
-                <li>
-                    See how many hours I've wasted away on <a href="//steamcommunity.com/id/Mehvix/">Steam</a> and <a
-                        href="//rgl.gg/Public/PlayerProfile.aspx?p=76561198127743698&r=40">RGL</a>.
-                </li>
-                <li>
-                    Watch Jon Bois' copyright-claimed magnum opus on <a
-                        href="//odysee.com/@Mehvix:4/%27WHY-DO-I-CHOOSE-THIS-FOR-A-LIVING%27----Jon-Bois-Pretty-Good-E8:2">Odysee</a>
-                    + <a href="//www.youtube.com/watch?v=bDt90EyZnWA">Youtube</a>.
-                </li>
-                <!-- <li>
-                        Resumé
-                        <a
-                            href="//cloud.mehvix.com/s/ePa34QwXgT4D29j"
-                            >Link</a
-                        >
-                    </li> -->
+                <li>Peep my <a href="//github.com/mehvix">GitHub</a> and <a href="//scratch.mit.edu/users/maxninja/">Scratch</a> projects</li>
+                <li>Jam to my <a href="//open.spotify.com/user/mehvix">Spotify</a> playlists</li>
+                <li>Stalk what I've read or am reading on <a href="//www.goodreads.com/mehvix/">GoodReads</a></li>
+                <li>Verify I am who I say I am, through <a href="//keybase.io/mehvix/">Keybase</a></li>
+                <li>Witness the power of <a href="//colemakmods.github.io/mod-dh/"><i>Colemak-DH</i></a> on <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a></li>
+                <li>MGE me, add my <a href="//steamcommunity.com/id/Mehvix/">Steam</a></li>
+                <li>Connect on the <a href="//www.linkedin.com/in/mehvix/">corporate cesspool</a></li>
+                <li>See my contribution to LLM models, my <a href="//stackoverflow.com/users/7833617/">Stack Overflow</a> answers</li>
+                <li>Watch my re-upload of Jon Bois' magnum opus on <a href="//odysee.com/@Mehvix:4/%27WHY-DO-I-CHOOSE-THIS-FOR-A-LIVING%27----Jon-Bois-Pretty-Good-E8:2">Odysee</a> & <a href="//www.youtube.com/watch?v=bDt90EyZnWA">YouTube</a></li>
             </ul>
         </div>
 
@@ -291,18 +220,11 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="//notes.mehvix.com">Notes</a>
-                </li>
-                <li>
-                    <a href="//mse.mehvix.com">MSE</a>
-                </li>
-                <li>
-                    <a href="//cs194.mehvix.com">CS194</a>
-                </li>
-                <li>
-                    <a href="//aops-rss.mehvix.com">AoPS RSS Generator</a>
-                </li>
+                <li><a href="//notes.mehvix.com">Notes</a></li>
+                <li><a href="//mse.mehvix.com">MSE</a></li>
+                <li><a href="//cs194.mehvix.com">CS194</a></li>
+                <li><a href="//cs194.mehvix.com">CS180</a></li>
+                <li><a href="//aops-rss.mehvix.com">AoPS RSS Generator</a></li>
             </ul>
         </div>
 
