--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div class="nav"><a href="">~</a>/</div>
         <div>
             <p>
-                Hello. My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — surely you can figure out what it means. I was born in 2002 and grew up around the <a href="https://en.wikipedia.org/wiki/Dane_County,_Wisconsin">great dairyland</a>. Here is a <a onclick="toggleImage(me)">picture</a><img class="expander" onclick="toggleImage(me)" /> of my dad and me circa 2007 Google Maps.
+                Hello. My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — surely you can figure out what it means. Born in 2002, I am glad to have grown up around the <a href="https://en.wikipedia.org/wiki/Dane_County,_Wisconsin">great dairyland</a>. Here is a <a onclick="toggleImage(me)">picture</a><img class="expander" onclick="toggleImage(me)" /> of my dad and me circa 2007 Google Maps.
             </p>
             <img id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" />
             <p>
-                Right now I'm in my forth year at <a href="//eecs.berkeley.edu/">Berkeley EECS</a> and a research assistant with the <a href="//radiology.ucsf.edu/research/labs/physics/big-data">BDRAD lab</a> at UCSF; I'm versed in modern approaches to deep learning and computer vision. Generally, I am passionate about promoting and protecting digital privacy and freedoms; I daily-drive a Linux system, as all CS majors should.
+                Right now I'm in my forth year at <a href="//eecs.berkeley.edu/">Berkeley EECS</a> and a research assistant with the <a href="//radiology.ucsf.edu/research/labs/physics/big-data">BDRAD lab</a> at UCSF; I'm versed in modern approaches to machine learning and computer vision. I am commit to establishing and protecting digital privacy and freedoms; I daily-drive a Linux system, as all CS majors ought to.
 
-                In my free time I enjoy <a href="//www.mosaicboulders.com//">bouldering</a> and <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>.
+                To turn off my brain, you may find me <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>, <a href="//www.mosaicboulders.com//">bouldering</a>, or on a hike.
             </p>
             <p>
                 Fun fact:
@@ -125,7 +125,7 @@
                 <li>Jam to my <a href="//open.spotify.com/user/mehvix">Spotify</a> playlists</li>
                 <li>Stalk what I've read or am reading on <a href="//www.goodreads.com/mehvix/">GoodReads</a></li>
                 <li>Verify I am who I say I am, through <a href="//keybase.io/mehvix/">Keybase</a></li>
-                <li>Witness the power of <a href="//colemakmods.github.io/mod-dh/"><i>Colemak-DH</i></a> on <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a></li>
+                <li>Witness the power of <a href="//colemakmods.github.io/mod-dh/"><i>Colemak-DH</i></a> with <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a></li>
                 <li>MGE me, add my <a href="//steamcommunity.com/id/Mehvix/">Steam</a></li>
                 <li>Connect on the <a href="//www.linkedin.com/in/mehvix/">corporate cesspool</a></li>
                 <li>See my contribution to LLM models, my <a href="//stackoverflow.com/users/7833617/">Stack Overflow</a> answers</li>
@@ -222,8 +222,7 @@
                 </li>
                 <li><a href="//notes.mehvix.com">Notes</a></li>
                 <li><a href="//mse.mehvix.com">MSE</a></li>
-                <li><a href="//cs194.mehvix.com">CS194</a></li>
-                <li><a href="//cs194.mehvix.com">CS180</a></li>
+                <li><a href="//cs180.mehvix.com">CS180</a> & <a href="//cs194.mehvix.com">CS194</a></li>
                 <li><a href="//aops-rss.mehvix.com">AoPS RSS Generator</a></li>
             </ul>
         </div>
