--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
         <div>
             <h1>Pages</h1>
+
             <ul>
                 <li>
                     <a href="posts">Blog</a> -- <a href="posts/rss.xml">RSS Feed</a>
@@ -169,8 +170,11 @@
                         </table>
                     </ul>
                 </li>
-                <li>
-                    <a href="/quotes">Quotes</a>
+                <li>Choice:
+                    <ol>
+                        <li><a href="/albums">Albums</a></li>
+                        <li><a href="/quotes">Quotes</a></li>
+                    </ol>
                 </li>
                 <!-- <li><a href="/todo">Projects TODO</a> (outdated)</li> -->
                 <!-- <li>
