--- a/mc.html
+++ b/mc.html
@@ -40,7 +40,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="/index.html">~</a>/<a href="./index.html">Server</a>/<a href="" class="inverse-bg">mc</a>
+            <a href="/index.html">~</a>/<a href="./index.html">Server</a>/<a href="">mc</a>
         </div>
 
         <code>mc.mehvix.com:25544</code><br /><br />
