fn preload, misc

--- a/albums.html
+++ b/albums.html
@@ -81,15 +81,23 @@
         </div>
 
         <article>
+            <p>
+                Zeppelin's discography should be here. ween, too, for that matter!
+            </p>
+            <p>
+                There is no definitive order here, excluding the first.
+            </p>
             <div id="main">
                 <a href="https://www.youtube.com/playlist?list=PLDIxWXRU4UDr-k-fG4f_BmcLQ3VQBIyuv"><img src="./static/media/albums/cnc.png"></a>
+                <a href="https://www.youtube.com/playlist?list=PLiuWChik5_Y-2MOHgElH5ykD-OJ0vTh6Q"><img src="./static/media/albums/larryland.jpg"></a>
                 <a href="https://www.youtube.com/playlist?list=PLI6kLIhBBwmRbnqlgavxfzIinIkHoNbG6"><img src="./static/media/albums/sit.png"></a>
+                <a href="https://www.youtube.com/playlist?list=OLAK5uy_mZgzZ2rnZng71zfDPG5ep012vj19X3ook"><img src="./static/media/albums/loveless.jpg"></a>
+                <a href="https://www.youtube.com/playlist?list=PL2D59D51BDE448389"><img src="./static/media/albums/moneystore.jpg"></a>
                 <a href="https://youtu.be/8f-nQPoi3aY"><img src="./static/media/albums/mirage.png"></a>
                 <a href="https://www.youtube.com/playlist?list=OLAK5uy_m-_hJUy5TAO10yRvbxgvSO3ZrBp9_zXg4"><img src="./static/media/albums/ahm.jpg"></a>
-                <a href="https://www.youtube.com/playlist?list=PLiuWChik5_Y-2MOHgElH5ykD-OJ0vTh6Q"><img src="./static/media/albums/larryland.jpg"></a>
-                <a href="https://www.youtube.com/playlist?list=PLfGibfZATlGrq7o_E7UOI9o_gGR3F5ONc"><img src="./static/media/albums/breakfast.png"></a>
                 <a href="https://www.youtube.com/playlist?list=PLfGibfZATlGogmBx443IFoYCguGNu6vtp"><img src="./static/media/albums/aja.png"></a>
                 <a href="https://www.youtube.com/playlist?list=PLCx_l3FfC447ig0dF9BLW0z3GjQUtq9xa"><img src="./static/media/albums/cong.png"></a>
+                <a href="https://www.youtube.com/playlist?list=PLdEiuPxBVWSjfPRLIdxP71365ef8jv5IL"><img src="." style="background: blue; height: 100%"></a>
             </div>
 
         </article>
