--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <div class="nav"><a href="">~</a>/</div>
         <div>
             <p>
-                Hello. My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — surely you can figure out what it means. Born in 2002, I am glad to have grown up around the <a href="https://en.wikipedia.org/wiki/Wisconsin">great dairyland</a>.
-                Here is a <span class="footnote" data-footnote="<img src='/static/media/home/me/gmaps2.png'/>" style-footnote="max-width: 400px; line-height: 0">picture</span>
-                <!-- Here is a <a onclick="toggleImage(me)">picture</a><img class="expander" onclick="toggleImage(me)" /> -->
-                of my dad and me circa 2007 Google Maps.
+                Hello. My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — surely you can figure out what it means. Born in 2002, I grew up around the <a href="https://en.wikipedia.org/wiki/Wisconsin">beer belt</a>.
+                Here is a <span class="footnote" img-footnote=/static/media/home/me/gmaps2.png style-footnote="max-width: 400px; line-height: 0">picture</span> of me and dad, circa 2007 Google Maps.
             </p>
-            <!-- <img id="me" src="/static/media/home/me/gmaps2.png" class="hidden dropdown" /> -->
             <p>
-                Right now I'm in my forth year at <a href="//eecs.berkeley.edu/">Berkeley EECS</a> and a research assistant with the <a href="//radiology.ucsf.edu/research/labs/physics/big-data">BDRAD lab</a> at UCSF; I'm versed in modern approaches to machine learning and computer vision. Personally, I value craftsmanship, and am commit to establishing and protecting digital privacy and freedoms; I daily-drive a Linux system, as all CS majors ought to.
+                Right now I'm in my forth year at <a href="//eecs.berkeley.edu/">Berkeley EECS</a> and a research assistant with UCSF's <a href="//radiology.ucsf.edu/research/labs/physics/big-data">BDRAD</a> lab; this is also my second year on course staff for the <a href="https://www2.eecs.berkeley.edu/Courses/CS180/">best class</a> at Berkeley.
+            </p>
+            <p>
+                Personally, I value craftsmanship, and am commit to establishing/ <span class="footnote" data-footnote="e.g. I daily drive GNU/Linux, as all CS majors ought!">exercising</span> digital privacy and freedoms.
 
-                To turn off my brain, you may find me <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>, <a href="//www.mosaicboulders.com//">bouldering</a>, or on a hike.
+                When I can, you may find me <a href="//www.instagram.com/tyrolbasinparks/">snowboarding park</a>, <a href="//www.mosaicboulders.com//">bouldering</a>, or walking around outside.
             </p>
             <p>
                 Fun fact:
@@ -128,7 +128,7 @@
                 <li>Peep my <a href="//github.com/mehvix">GitHub</a> and <a href="//scratch.mit.edu/users/maxninja/">Scratch</a> projects</li>
                 <li>Jam to my <a href="//open.spotify.com/user/mehvix">Spotify</a> playlists</li>
                 <li>Stalk what I've read or am reading on <a href="//www.goodreads.com/mehvix/">GoodReads</a></li>
-                <li>Verify I am who I say I am, through <a href="//keybase.io/mehvix/">Keybase</a></li>
+                <li>Verify I am who I say I am through <a href="//keybase.io/mehvix/">Keybase</a></li>
                 <li>Witness the power of <a href="//colemakmods.github.io/mod-dh/"><i>Colemak-DH</i></a> with <a href="//monkeytype.com/profile/Mehvix">Monkeytype</a></li>
                 <li>MGE me, add my <a href="//steamcommunity.com/id/Mehvix/">Steam</a></li>
                 <li>Connect on the <a href="//www.linkedin.com/in/mehvix/">corporate cesspool</a></li>
