--- a/albums.html
+++ b/albums.html
@@ -46,7 +46,7 @@
         div#main {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         div#main a {
@@ -59,8 +59,6 @@
             height: auto;
             display: block;
         }
-
-
 
         div#main a {
             box-shadow: unset !important;
@@ -101,8 +99,8 @@
                 <a class="hover-container" href="https://www.youtube.com/playlist?list=PLDIxWXRU4UDr-k-fG4f_BmcLQ3VQBIyuv"><img src="./static/media/albums/cnc.png"><img src="./static/media/albums/cnc-back.png" class="flip"></a>
                 <a class="hover-container" href="https://www.youtube.com/playlist?list=PLiuWChik5_Y-2MOHgElH5ykD-OJ0vTh6Q"><img src="./static/media/albums/larryland.jpg"><img src="./static/media/albums/larrland-back.jpg"></a>
                 <a href="https://www.youtube.com/playlist?list=PLI6kLIhBBwmRbnqlgavxfzIinIkHoNbG6"><img src="./static/media/albums/sit.png"></a>
+                <a class="hover-container" href="https://www.youtube.com/playlist?list=PL-1WfwmFPJs-zwTPlslMcxwo72OoxV9e1"><img src="./static/media/albums/ex.png"><img src="./static/media/albums/ex2.png"></a>
                 <a href="https://www.youtube.com/playlist?list=OLAK5uy_mZgzZ2rnZng71zfDPG5ep012vj19X3ook"><img src="./static/media/albums/loveless.jpg"></a>
-                <a href="https://www.youtube.com/playlist?list=PL2D59D51BDE448389"><img src="./static/media/albums/moneystore.jpg"></a>
                 <a href="https://www.youtube.com/playlist?list=PLfGibfZATlGogmBx443IFoYCguGNu6vtp"><img src="./static/media/albums/aja.png"></a>
                 <a href="https://www.youtube.com/playlist?list=OLAK5uy_m-_hJUy5TAO10yRvbxgvSO3ZrBp9_zXg4"><img src="./static/media/albums/ahm.jpg"></a>
                 <a href="https://youtu.be/8f-nQPoi3aY"><img src="./static/media/albums/mirage.jpg" style="aspect-ratio: 1;"></a>
@@ -110,6 +108,7 @@
                 <a href="https://www.youtube.com/playlist?list=PLAJQM3LahnwfpgHq15P2fjMR5bWctCJQq"><img src="./static/media/albums/up.png"></a>
                 <a href="https://www.youtube.com/playlist?list=PLCx_l3FfC447ig0dF9BLW0z3GjQUtq9xa"><img src="./static/media/albums/cong.png"></a>
                 <a href="https://www.youtube.com/playlist?list=PLdEiuPxBVWSjfPRLIdxP71365ef8jv5IL"><img src="." style="background: blue; height: 100%"></a>
+                <a href="https://www.youtube.com/playlist?list=PLCx_l3FfC446YhZSrnYvxRLr3evK943La"><img src="./static/media/albums/do.jpg"></a>
             </div>
 
         </article>
