--- a/albums.html
+++ b/albums.html
@@ -73,6 +73,10 @@
             cursor: cell;
         }
 
+        a:not(.hover-container) img:hover {
+            filter: invert(.8);
+        }
+
     </style>
 
     <script src="./static/js/hover-img.js"></script>
@@ -93,23 +97,28 @@
                 Zeppelin's discography should be here. ween, too, for that matter!
             </p>
             <p>
-                There is no definitive order here, aside from the first, which is <span class="footnote" data-footnote="but really live ween is  superior to their studio sets">first</span>.
+                There is no definitive order here, aside from the first, which is <span class="footnote" data-footnote="but really ween's live recordings are superior to the studio">first</span>.
             </p>
             <div id="main">
-                <a class="hover-container" href="https://www.youtube.com/playlist?list=PLDIxWXRU4UDr-k-fG4f_BmcLQ3VQBIyuv"><img src="./static/media/albums/cnc.png"><img src="./static/media/albums/cnc-back.png" class="flip"></a>
-                <a class="hover-container" href="https://www.youtube.com/playlist?list=PLiuWChik5_Y-2MOHgElH5ykD-OJ0vTh6Q"><img src="./static/media/albums/larryland.jpg"><img src="./static/media/albums/larrland-back.jpg"></a>
-                <a href="https://www.youtube.com/playlist?list=PLI6kLIhBBwmRbnqlgavxfzIinIkHoNbG6"><img src="./static/media/albums/sit.png"></a>
-                <a class="hover-container" href="https://www.youtube.com/playlist?list=PL-1WfwmFPJs-zwTPlslMcxwo72OoxV9e1"><img src="./static/media/albums/ex.png"><img src="./static/media/albums/ex2.png"></a>
-                <a href="https://www.youtube.com/playlist?list=OLAK5uy_mZgzZ2rnZng71zfDPG5ep012vj19X3ook"><img src="./static/media/albums/loveless.jpg"></a>
-                <a href="https://www.youtube.com/playlist?list=PLfGibfZATlGogmBx443IFoYCguGNu6vtp"><img src="./static/media/albums/aja.png"></a>
-                <a href="https://www.youtube.com/playlist?list=OLAK5uy_m-_hJUy5TAO10yRvbxgvSO3ZrBp9_zXg4"><img src="./static/media/albums/ahm.jpg"></a>
-                <a href="https://youtu.be/8f-nQPoi3aY"><img src="./static/media/albums/mirage.jpg" style="aspect-ratio: 1;"></a>
-                <a class="hover-container" href="https://www.youtube.com/playlist?list=PLo2VF3ux4qcZ6b7vL7SVhBEK_NAbKzsoD"><img src="./static/media/albums/paranoid.png"><img src="./static/media/albums/paranoid-back.png" class="flip"></a>
-                <a href="https://www.youtube.com/playlist?list=PLAJQM3LahnwfpgHq15P2fjMR5bWctCJQq"><img src="./static/media/albums/up.png"></a>
-                <a href="https://www.youtube.com/playlist?list=PLCx_l3FfC447ig0dF9BLW0z3GjQUtq9xa"><img src="./static/media/albums/cong.png"></a>
-                <a href="https://www.youtube.com/playlist?list=PLdEiuPxBVWSjfPRLIdxP71365ef8jv5IL"><img src="." style="background: blue; height: 100%"></a>
-                <a href="https://www.youtube.com/playlist?list=PLCx_l3FfC446YhZSrnYvxRLr3evK943La"><img src="./static/media/albums/do.jpg"></a>
+                <a target="_blank" class="hover-container" href="https://www.youtube.com/playlist?list=PLDIxWXRU4UDr-k-fG4f_BmcLQ3VQBIyuv"><img src="./static/media/albums/cnc.png"><img src="./static/media/albums/cnc-back.png" class="flip"></a>
+                <a target="_blank" class="hover-container" href="https://www.youtube.com/playlist?list=PLiuWChik5_Y-2MOHgElH5ykD-OJ0vTh6Q"><img src="./static/media/albums/larryland.jpg"><img src="./static/media/albums/larrland-back.jpg"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLI6kLIhBBwmRbnqlgavxfzIinIkHoNbG6"><img src="./static/media/albums/sit.png"></a>
+                <a target="_blank" class="hover-container" href="https://www.youtube.com/playlist?list=PL-1WfwmFPJs-zwTPlslMcxwo72OoxV9e1"><img src="./static/media/albums/ex.png"><img src="./static/media/albums/ex2.png"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=OLAK5uy_mZgzZ2rnZng71zfDPG5ep012vj19X3ook"><img src="./static/media/albums/loveless.jpg"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLfGibfZATlGogmBx443IFoYCguGNu6vtp"><img src="./static/media/albums/aja.png"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=OLAK5uy_m-_hJUy5TAO10yRvbxgvSO3ZrBp9_zXg4"><img src="./static/media/albums/ahm.jpg"></a>
+                <a target="_blank" href="https://youtu.be/8f-nQPoi3aY"><img src="./static/media/albums/mirage.jpg" style="aspect-ratio: 1;"></a>
+                <a target="_blank" class="hover-container" href="https://www.youtube.com/playlist?list=PLo2VF3ux4qcZ6b7vL7SVhBEK_NAbKzsoD"><img src="./static/media/albums/paranoid.png"><img src="./static/media/albums/paranoid-back.png" class="flip"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLAJQM3LahnwfpgHq15P2fjMR5bWctCJQq"><img src="./static/media/albums/up.png"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLCx_l3FfC447ig0dF9BLW0z3GjQUtq9xa"><img src="./static/media/albums/cong.png"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLdEiuPxBVWSjfPRLIdxP71365ef8jv5IL"><img src="." style="background: blue; height: 100%"></a>
+                <a target="_blank" href="https://www.youtube.com/playlist?list=PLCx_l3FfC446YhZSrnYvxRLr3evK943La"><img src="./static/media/albums/do.jpg"></a>
             </div>
+            <br>
+            <br>
+            <p>
+                Tangentially, there are some <a href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=ca8e116a69c24f59">songs to show people what I listen to</a>, but songs are not quiet the experience  albums are; sequencing matters!
+            </p>
 
         </article>
 
