--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="nav"><a href="">~</a>/</div>
         <div>
             <p>
-                Hello. My name is Max Vogel, but <i class="sc">Mehvix</i> is my username for most things on the web — surely you can figure out what it means. Born in 2002, I grew up around the <a href="https://en.wikipedia.org/wiki/Wisconsin">beer belt</a>.
+                Hello. My name is Max Vogel, and I am the original <i class="sc">Mehvix</i>. Born in 2002, I grew up around the beer belt, in the  <a href="https://en.wikipedia.org/wiki/Wisconsin">state</a> the rules the world.
                 Here is a <span class="footnote" img-footnote=/static/media/home/me/gmaps2.png style-footnote="max-width: 400px; line-height: 0">picture</span> of me and dad, circa 2007 Google Maps.
             </p>
             <p>
@@ -228,7 +228,22 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="//notes.mehvix.com">Notes</a></li>
+                <li>
+                    <a href="//notes.mehvix.com">Notes</a>
+                     [Cribs:
+                     CS
+                     <a href="//notes.mehvix.com/cheatsheets/cs-161/">161</a>
+                     <a href="//notes.mehvix.com/cheatsheets/cs-162/">162</a>
+                     <a href="//notes.mehvix.com/cheatsheets/cs-170/">170</a>
+                     <a href="//notes.mehvix.com/cheatsheets/cs-182/">182</a>
+                     <a href="//notes.mehvix.com/cheatsheets/cs-184/">184</a>
+                     EECS
+                     <a href="//notes.mehvix.com/cheatsheets/eecs-16B/">16B</a>
+                     <a href="//notes.mehvix.com/cheatsheets/eecs-126/">126</a>
+                     <a href="//notes.mehvix.com/cheatsheets/eecs-127/">127</a>
+                     <a href="//notes.mehvix.com/cheatsheets/bioe-C165/">C145</a>
+                     <a href="//notes.mehvix.com/cheatsheets/eecs-151/">151</a>]
+                </li>
                 <li><a href="//mse.mehvix.com">MSE</a></li>
                 <li><a href="//cs184.mehvix.com">CS184</a> & <a href="//cs194.mehvix.com">CS194</a></li>
                 <li><a href="//aops-rss.mehvix.com">AoPS RSS Generator</a></li>
